@@ -13,7 +13,7 @@ use Carp qw/croak/;
 our @EXPORT_OK = qw{
     compare
     get_build push_build pop_build build
-    strict_convert relaxed_convert
+    strict_convert relaxed_convert convert
 };
 use base 'Exporter';
 
@@ -61,12 +61,13 @@ sub build {
     return $build;
 }
 
-sub strict_convert  { convert($_[0], 1) }
-sub relaxed_convert { convert($_[0], 0) }
+sub strict_convert  { convert($_[0], { implicit_end => 1, use_regex => 0, use_code => 0 }) }
+sub relaxed_convert { convert($_[0], { implicit_end => 0, use_regex => 1, use_code => 1 }) }
 
 my $CONVERT_LOADED = 0;
+my %ALLOWED_KEYS = ( implicit_end => 1, use_regex => 1, use_code => 1 );
 sub convert {
-    my ($thing, $strict) = @_;
+    my ($thing, $config) = @_;
 
     unless($CONVERT_LOADED) {
         require Test2::Compare::Array;
@@ -84,18 +85,48 @@ sub convert {
         $CONVERT_LOADED = 1;
     }
 
+    if (ref($config)) {
+        my $bad = join ', ' => grep { !$ALLOWED_KEYS{$_} } keys %$config;
+        croak "The following config options are not understood by convert(): $bad" if $bad;
+        $config->{implicit_end} = 1 unless defined $config->{implicit_end};
+        $config->{use_regex}    = 1 unless defined $config->{use_regex};
+        $config->{use_code}     = 0 unless defined $config->{use_code};
+    }
+    else { # Legacy...
+        if ($config) {
+            $config = {
+                implicit_end => 1,
+                use_regex  => 0,
+                use_code   => 0,
+            };
+        }
+        else {
+            $config = {
+                implicit_end => 0,
+                use_regex  => 1,
+                use_code   => 1,
+            };
+        }
+    }
+
+    return _convert($thing, $config);
+}
+
+sub _convert {
+    my ($thing, $config) = @_;
+
     return Test2::Compare::Undef->new()
         unless defined $thing;
 
     if ($thing && blessed($thing) && $thing->isa('Test2::Compare::Base')) {
-        if ($strict && $thing->can('set_ending') && !defined $thing->ending) {
+        if ($config->{implicit_end} && $thing->can('set_ending') && !defined $thing->ending) {
             my $clone = $thing->clone;
             $clone->set_ending('implicit');
             return $clone;
         }
 
         return $thing unless $thing->isa('Test2::Compare::Wildcard');
-        my $newthing = convert($thing->expect, $strict);
+        my $newthing = _convert($thing->expect, $config);
         $newthing->set_builder($thing->builder) unless $newthing->builder;
         $newthing->set_file($thing->_file)      unless $newthing->_file;
         $newthing->set_lines($thing->_lines)    unless $newthing->_lines;
@@ -104,27 +135,25 @@ sub convert {
 
     my $type = rtype($thing);
 
-    return Test2::Compare::Array->new(inref => $thing, $strict ? (ending => 1) : ())
+    return Test2::Compare::Array->new(inref => $thing, $config->{implicit_end} ? (ending => 1) : ())
         if $type eq 'ARRAY';
 
-    return Test2::Compare::Hash->new(inref => $thing, $strict ? (ending => 1) : ())
+    return Test2::Compare::Hash->new(inref => $thing, $config->{implicit_end} ? (ending => 1) : ())
         if $type eq 'HASH';
 
-    unless ($strict) {
-        return Test2::Compare::Pattern->new(
-            pattern       => $thing,
-            stringify_got => 1,
-        ) if $type eq 'REGEXP';
+    return Test2::Compare::Pattern->new(
+        pattern       => $thing,
+        stringify_got => 1,
+    ) if $config->{use_regex} && $type eq 'REGEXP';
 
-        return Test2::Compare::Custom->new(code => $thing)
-            if $type eq 'CODE';
-    }
+    return Test2::Compare::Custom->new(code => $thing)
+        if $config->{use_code} && $type eq 'CODE';
 
     return Test2::Compare::Regex->new(input => $thing)
         if $type eq 'REGEXP';
 
     if ($type eq 'SCALAR') {
-        my $nested = convert($$thing, $strict);
+        my $nested = _convert($$thing, $config);
         return Test2::Compare::Scalar->new(item => $nested);
     }
 
@@ -137,7 +166,6 @@ sub convert {
     # is() will assume string and use 'eq'
     return Test2::Compare::String->new(input => $thing);
 }
-
 
 1;
 
@@ -219,41 +247,174 @@ passed in is different from the current global.
 Run the provided codeblock with a new instance of C<$class> as the current
 build. Returns the new build.
 
-=item $check = strict_convert($thing)
+=item $check = convert($thing)
 
-Convert C<$thing> to an L<Test2::Compare::*> object. This will behave strictly
-which means:
+=item $check = convert($thing, $config)
+
+This convert function is used by C<strict_convert()> and C<relaxed_convert()>
+under the hood. It can also be used as the basis for other convert functions.
+
+If you want to use it with a custom configuration you should wrap it in another
+sub like so:
+
+    sub my_convert {
+        my $thing_to_convert = shift;
+        return convert(
+            $thing_to_convert,
+            { ... }
+        );
+    }
+
+Or the short variant:
+
+    sub my_convert { convert($_[0], { ... }) }
+
+There are several configuration options, here they are with the default setting
+listed first:
 
 =over 4
 
-=item Array bounds will be checked when this object is used in a comparison
+=item implicit_end => 1
 
-=item No unexpected hash keys can be present.
+This option toggles array/hash boundaries. If this is true then no extra hash
+keys or array indexes will be allowed. This setting effects generated compare
+objects as well as any passed in.
 
-=item Sub references will be compared as refs (IE are these sub refs the same ref?)
+=item use_regex => 1
 
-=item Regexes will be compared directly (IE are the regexes the same?)
+This option toggles regex matching. When true (default) regexes are converted
+to checks such that values must match the regex. When false regexes will be
+compared to see if they are identical regexes.
+
+=item use_code => 0
+
+This option toggles code matching. When false (default) coderefs in structures
+must be the same coderef as specified. When true coderefs will be run to verify
+the value being checked.
+
+=back
+
+=item $check = strict_convert($thing)
+
+Convert C<$thing> to an L<Test2::Compare::*> object. This will behave strictly
+which means it uses these settings:
+
+=over 4
+
+=item implicit_end => 1
+
+Array bounds will be checked when this object is used in a comparison. No
+unexpected hash keys can be present.
+
+=item use_code => 0
+
+Sub references will be compared as refs (IE are these sub refs the same ref?)
+
+=item use_regex => 0
+
+Regexes will be compared directly (IE are the regexes the same?)
 
 =back
 
 =item $compare = relaxed_convert($thing)
 
 Convert C<$thing> to an L<Test2::Compare::*> object. This will be relaxed which
-means:
+means it uses these settings:
 
 =over 4
 
-=item Array bounds will not be checked when this object is used in a comparison
+=item implicit_end => 0
 
-=item Unexpected hash keys can be present.
+Array bounds will not be checked when this object is used in a comparison.
+Unexpected hash keys can be present.
 
-=item Sub references will be run to verify a value.
+=item use_code => 1
 
-=item Values will be checked against any regexes provided.
+Sub references will be run to verify a value.
+
+=item use_regex => 1
+
+Values will be checked against any regexes provided.
 
 =back
 
 =back
+
+=head1 WRITING A VARIANT OF IS/LIKE
+
+    use Test2::Compare qw/compare convert/;
+
+    sub my_like($$;$@) {
+        my ($got, $exp, $name, @diag) = @_;
+        my $ctx = context();
+
+        # A custom converter that does the same thing as the one used by like()
+        my $convert = sub {
+            my $thing = shift;
+            return convert(
+                $thing,
+                {
+                    implicit_end => 0,
+                    use_code     => 1,
+                    use_regex    => 1,
+                }
+            );
+        };
+
+        my $delta = compare($got, $exp, $convert);
+
+        if ($delta) {
+            $ctx->ok(0, $name, [$delta->diag, @diag]);
+        }
+        else {
+            $ctx->ok(1, $name);
+        }
+
+        $ctx->release;
+        return !$delta;
+    }
+
+The work of a comparison tool is done by 3 entities:
+
+=over 4
+
+=item compare()
+
+The C<compare()> function takes the structure you got, the specification you
+want to check against, and a C<\&convert> sub that will convert anything that
+is not an instance of an L<Test2::Compare::Base> subclass into one.
+
+This tool will use the C<\&convert> function on the specification, and then
+produce an L<Test2::Compare::Delta> structure that outlines all the ways the
+structure you got deviates from the specification.
+
+=item \&convert
+
+Converts anything that is not an instance of an L<Test2::Compare::Base>
+subclass, and turns it into one. The objects this produces are able to check
+that a structure matches a specification.
+
+=item $delta
+
+An instance of L<Test2::Compare::Delta> is ultimately returned. This object
+represents all the ways in with the structure you got deviated from the
+specification. The delta is a tree and may contain child deltas for nested
+structures.
+
+The delta is capable of rendering itself as a table, use C<< @lines =
+$delta->diag >> to get the table (lines in C<@lines> will not be terminated
+with C<"\n">).
+
+=back
+
+The C<convert()> function provided by this package contains all the
+specification behavior of C<like()> and C<is()>. It is intended to be wrapped
+in a sub that passes in a configuration hash, which allows you to control the
+behavior.
+
+You are free to write your own C<$check = compare($thing)> function, it just
+needs to accept a single argument, and produce a single instance of an
+L<Test2::Compare::Base> subclass.
 
 =head1 SOURCE
 
